# pocket-http

./: .gitignore  CMakeLists.txt  LICENSE  README.md  buildzri.config.json  main.cpp
.github/workflows/: test_macos.yml  test_suite.yml
LICENSES/: mbedtls.LICENSE
examples/: amalgamated.cpp  basic_request.cpp  download.cpp  form_data.cpp  form_urlencoded.cpp  send_file.cpp  send_json.cpp  systemcerts.cpp
include/base64/: base64.hpp
include/pockethttp/: Buffer.hpp  Decompress.hpp  Headers.hpp  Http.hpp  Logs.hpp  Random.hpp  Request.hpp  Response.hpp  Results.hpp  SystemCerts.hpp  Timestamp.hpp  pockethttp.hpp
include/pockethttp/Decompress/: Constants.hpp  MinizWrapper.hpp  StreamingDecompressor.hpp  StreamingDeflateDecompressor.hpp  StreamingGzipDecompressor.hpp  StreamingGzipParser.hpp
include/pockethttp/Sockets/: MbedTLSSocket.hpp  SocketPool.hpp  SocketWrapper.hpp  TCPSocket.hpp  TLSSocket.hpp  certs.hpp  mbedtls_config.h
include/pockethttp/TLS/: TLSSocket.hpp  certs.hpp
scripts/: amalgamate.py  bz.py  combine.py  parse.py
src/: Buffer.cpp  Decompress.cpp  Headers.cpp  Http.cpp  Request.cpp  SystemCerts.cpp  Timestamp.cpp
src/Sockets/: MbedTLSSocket.cpp  SocketPool.cpp  SocketWrapper.cpp  TCPSocket.cpp  TLSSocket.cpp
src/TLS/: TLSSocket.cpp
src/bearssl/: inner.h
src/bearssl/aead/: gcm.c
src/bearssl/codec/: dec16be.c  dec32le.c  enc16be.c  enc32be.c  enc32le.c  enc64be.c  enc64le.c
src/bearssl/ec/: ec_p256_m31.c  ec_prime_i31.c
src/bearssl/hash/: ghash_ctmul64.c  ghash_pclmul.c  md5.c  md5sha1.c
src/bearssl/int/: i15_encode.c  i31_decmod.c  i32_decmod.c  i32_encode.c
src/bearssl/kdf/: shake.c
src/bearssl/rand/: aesctr_drbg.c
src/bearssl/rsa/: rsa_i15_oaep_encrypt.c  rsa_i31_keygen_inner.c  rsa_i31_pss_vrfy.c  rsa_i32_oaep_decrypt.c  rsa_i32_pss_vrfy.c  rsa_i62_oaep_decrypt.c  rsa_i62_oaep_encrypt.c  rsa_i62_pss_vrfy.c  rsa_oaep_pad.c  rsa_oaep_unpad.c
src/bearssl/ssl/: prf.c  ssl_hs_client.c  ssl_hs_server.c  ssl_io.c  ssl_rec_chapol.c
src/bearssl/symcipher/: aes_big_enc.c  aes_ct64_cbcdec.c  aes_ct64_cbcenc.c  aes_ct64_ctr.c  aes_ct64_ctrcbc.c  aes_small_cbcenc.c  aes_small_dec.c  aes_small_enc.c  aes_x86ni.c  aes_x86ni_cbcdec.c  aes_x86ni_ctr.c  aes_x86ni_ctrcbc.c  chacha20_ct.c  chacha20_sse2.c  des_tab.c  des_tab_cbcenc.c  poly1305_ctmul.c  poly1305_ctmul32.c  poly1305_i15.c
src/bearssl/x509/: encode_ec_pk8der.c  encode_ec_rawder.c  skey_decoder.c  x509_decoder.c  x509_minimal.c
